20070518:
- bugfix: misplaced ifdef could lead to failures for options -d and -b
  on systems that do not support device block size determination
- fixed possible hang on SIGINT without status thread
- write summary to stderr if no tty is available

20070502:
- added support for setting the output device's volume size explicitly
  (patch by Sean Walmsley)
- minor cleanups
- make locking more solid
  (in theory [only], a deadlock could have occurred)
- assert() everything

20070401:
- prefix name of executable before every message
- added some missing newlines
- set dependency for "make install" on "make"
  (i.e. "make install" also builds mbuffer)

20070317:
- fix: mbuffer erroneously return with EXIT_SUCCESS when it got 
       interrupted by SIGINT or SIGTERM

20060728:
- changed signal handling to prevent syscalls returning with EINTR in
  reader and writer
- fix for warnings, fatals, and errors getting truncated
- sleep before printing I/O rates for the first time to prevent showing
  insane values

20060704:
- use condition variables to safely signal crossing of watermarks
- include times full/empty (crossing of low/high watermark) in summary
  (proposal by Alex Kramarov)
- enhanced status and summary output to be display stats with a higher
  precisions

20060626:
- bugfix and enhancement for rate limitation code
- fixed regressions caused by switching from float to double
- make sure outputThread doesn't start initially if -P is set
- write debug logs a little bit more thread friendly 
  (i.e. switched from stream- to normal file ops)

20060616:
- added speed limiting (options -r and -R)
- fix errormessage in calcint
- show option -d in usage output only if it is available
- use of float really doesn't make any sense nowadays;
  changed all floats to double

20060421:
- set exitcode to failure whenever an error occures
- fixed a warning

20060324:
- added option -c to enable synchronous data integrity I/O: